--- a/css/style.css
+++ b/css/style.css
@@ -143,10 +143,43 @@ border-radius: 19.7436px;
     width: 343.54px;
     height: 213.23px;
 }
+.client{
+    width: 1440px;
+    height: 814px;
+    background-color: #F8F9FC;
+    margin-top: 10% ;
+    padding: 10px 20px;
+    text-align: center;    
+       
+}
+.client-section{
+    width: 370px;
+    height: 374px;
+    margin-left: 30px;
+    padding: 10px 20px;
+    float: left;
+
+background: #FFFFFF;
+box-shadow: 0px 6.5812px 19.7436px rgba(0, 0, 0, 0.07);
+border-radius: 19.7436px;
+}
+.client-demo{
+    width: 100%;
+    margin-top: 5% ;
+    margin-bottom: 10% ;
+    padding-left: 20%;
+}
+.client-section img{
+    width: 100px;
+   }
+   .client-section h3{
+    color: #FF8367;
+    font-weight: bold;
+   }
 
 .contact-box{
     width: 906px;
-    height: 225px;
+    height: 125px;
     margin: 10% 8%;
     padding: 10% 10%;
     background-image: url(../assets/shapes/Group_33094_1.png);
